--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <script defer src="https://kit.fontawesome.com/1dc93c46da.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js">
   <script defer src="assets/js/script.js"></script>
   <title>Document</title>
 </head>
@@ -33,6 +34,8 @@
           <img data-id="4" class="img" src="assets/images/4.jpg" alt="">
           <img data-id="5" class="img" src="assets/images/5.jpg" alt="">
           <img data-id="6" class="img" src="assets/images/6.jpg" alt="">
+          <img data-id="7" class="img" src="assets/images/7.jpg" alt="">
+          <img data-id="8" class="img" src="assets/images/8.jpg" alt="">
 
         </div>
 
@@ -47,6 +50,8 @@
             <div data-id="4" class="tab"></div>
             <div data-id="5" class="tab"></div>
             <div data-id="6" class="tab"></div>
+            <div data-id="7" class="tab"></div>
+            <div data-id="8" class="tab"></div>
 
           </div>
         </div>
